2008-02-27  Joshua Sumali  <jsumali@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/InstallDialog.java: Fix bad resource
	path.

2008-02-27  Joshua Sumali  <jsumali@redhat.com>

	* Makefile.am:
	(tools-class-files): Removed unused target.
	* Makefile.in: Regenerated.

2008-02-27  Joshua Sumali  <jsumali@redhat.com>
	    Francis Kung  <fkung@redhat.com>

	* Makefile.am:
	(tools.stamp): Removed since NetX sources moved from tools/ to rt/
	(tools): Likewise.
	(tools-source-files.txt): Likewise.
	(tools-class-files.stamp): Likewise.
	(clean-tools): Likewise.
	(default-jnlp.stamp): New target.
	(default-jnlp): Likewise.
	(rt-closed.jar): Add rt/net when creating jar.
	(ICEDTEA_PATCHES): Add NETX_PLUGIN conditional.
	* Makefile.in: Regeneraged.
	* acinclude.m4: (ENABLE_NETX_PLUGIN): New macro
	* configure: Regenerated.
	* configure.ac: Add ENABLE_NETX_PLUGIN.
	* README: Updated.
	* patches/icedtea-copy-plugs.patch: Added importing of rt/net/* as binary
	plugs to rt.jar.
	* patches/icedtea-netx-plugin.patch: New file. This patch is used when
	NETX_PLUGIN is true.
	* patches/icedtea-webservices.patch: New file. This is
	icedtea-jnlp-launcher.patch and icedtea-plugin.patch combined into one.
	* patches/icedtea-jnlp-launcher.patch: Removed.
	* patches/icedtea-plugin.patch: Removed.
	* tools/: This former directory for holding NetX sources was deleted and the
	sources were moved to ...
	* rt/net/sourceforge/: Here. NetX sources now follow correct package
	naming.

2008-02-26  Lillian Angel  <langel@redhat.com>

	* Makefile.am
	(FREETYPE2_INC_DIR): Removed.
	(FREETYPE2_HEADERS): New var.
	(FT2_LIB): New var.
	(ICEDTEA_PATCHES): Added icedtea-freetype.patch.
	* patches/icedtea-freetype.patch: New file.
	* Makefile.in: Regenerated.

2008-02-26  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-libraries.patch: Fixed dlopen calls. No longer
	hardcoding paths to libjpeg.so.62.

2008-02-23  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* IcedTeaPlugin.cc: New file.